--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.1.1",
     "prettier-plugin-svelte": "^1.1.1",
     "rollup": "^2.3.4",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
